tests/ui/derive/fail_api_schema_empty_each_validate_rule.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
struct EmptyEachValidateRule {
    #[validate(each())]
    tags: Vec<String>,
}

fn main() {}
